继续汉化一些行为明确的战斗配置选项说明

--- a/conf/battle/items.conf
+++ b/conf/battle/items.conf
@@ -12,16 +12,20 @@
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-// The highest value at which an item can be sold via the merchant vend skill. (in zeny)
+// 露天商店贩卖物品的最高价格 (单位为Zeny)
 vending_max_value: 1000000000
 
-// Whether to allow buying from vending chars that are at their max. zeny limit.
-// If set to yes, the rest of the zeny above the char's capacity will disappear.
+// 如果即将卖出的东西所获得的金币, 会导致商贩的身上的钱超过金币的最大上限, 
+// 那么是否还继续出售此物品? (金币的最大上限默认为1,000,000,000Zeny)
+// 如果设置为 yes 的话, 那么超出部分的金币将会消失. 
 vending_over_max: yes
 
-// Tax to apply to all vending transactions (eg: 10000 = 100%, 50 = 0.50%)
-// When a tax is applied, the item's full price is charged to the buyer, but
-// the vender will not get the whole price paid (they get 100% - this tax).
+// 露天商店的税率
+// 填写 10000 的话则表示税率是 100%, 填写 50 的话表示税率是 0.50%
+// 默认情况下 rAthena 的税率是 5%
+// 
+// 如果设置了税率的话, 那么比如买家付出了 10000 金币来购买某些商品, 
+// 但是商贩最终拿到手的钱, 只有(10000金币 - (10000金币 x 税率))的钱. 
 vending_tax: 500
 
 // Minimum total of purchase until taxes are applied.
@@ -29,51 +33,70 @@ vending_tax: 500
 // 0 will apply taxes to all transactions.
 vending_tax_min: 100000000
 
-// Show the buyer's name when successfully vended an item
+// 当露天商店中有东西被人买走的话, 是否在商贩的聊天栏显示买家的名字
 buyer_name: yes
 
-// Forging success rate. (Note 2)
+// 武器制造成功倍率 (百分比选项)
 weapon_produce_rate: 100
 
-// Prepare Potion success rate. (Note 2)
+// 药水制作成功倍率 (百分比选项)
 potion_produce_rate: 100
 
-// Do produced items have the maker's name on them? (Note 3)
-// 0x01: Produced Weapons
-// 0x02: Produced Potions
-// 0x04: Produced Arrows
-// 0x08: Produced Holy Water/Ancilla
-// 0x10: Produced Deadly Potions
-// 0x80: Other produced items.
+// 哪些道具会在道具名称中显示出制造者的名字?  (掩码选项)
+// 0x01: 被制造出来的武器
+// 0x02: 被制造出来的药水
+// 0x04: 被制造出来的箭矢
+// 0x08: 被制造出来的圣水/辅助者
+// 0x10: 被制造出来的毒药
+// 0x80: 其他被制造出来的物品
 produce_item_name_input: 0x03
 
-// Is a monster summoned via dead branch aggressive? (Note 1)
+// 当使用魔物召唤道具(比如血迹树枝或枯树枝)召唤出魔物时
+// 这个魔物是否会主动攻击? (开关选项)
+//
+// 如果开启此选项, 哪怕召唤出来的是默认不会主动攻击的魔物(比如波利), 
+// 那么这只波利也会主动攻击周围的玩家
 dead_branch_active: yes
 
-// Should summoned monsters check the player's base level? (dead branches) (Note 1)
-// On officials this is no - monsters summoned from dead/bloody branches can be ANY level.
-// Change to 'yes' to only summon monsters less than or equal to the player's base level.
+// 魔物召唤道具所召唤出来的魔物, 
+// 等级是否必须低于或等于召唤者的基础等级? (开关选项)
+// 
+// 按照官方设定的话, 默认值为 no, 召唤出来的魔物可以是任何等级, 
+// 10 级的初学者也有可能召唤出99级的魔物出来. 
+// 
+// 若设置为 yes 的话, 那么召唤出来的魔物等级不会高于召唤者的基础等级, 
+// 10级的初学者召唤出来的魔物等级不会超过 10 级. 
 random_monster_checklv: no
 
-// Can any player equip any item regardless of the gender restrictions
-// NOTE: Wedding Rings and Whips/Musical Instruments will check gender regardless of setting.
+// 玩家是否可以无视性别限制而装备任何道具? 
+// 注意: 结婚戒指以及鞭子/乐器不受此选项的影响, 穿戴它们时, 始终会检查性别限制. 
 ignore_items_gender: yes
 
-// On map change it will check for items not tagged as "available" and
-// auto-delete them from inventory/cart/storage.
-// NOTE: An item is not available if it was not loaded from the item_db or
-// specified as unavailable in db/item_avail.txt
-// 0x1: Inventory
-// 0x2: Cart
-// 0x4: Storage
+// 登录和过图时是否检查物品的有效性? (掩码选项)
+//
+// 当玩家登录或者过图时, 服务端会检查玩家背包/手推车/仓库中是否有“不可用”物品, 
+// 如果有的话, 服务端会自动删除这些道具. 
+// 
+// 注意: 当一个物品对应的item_db中的信息不见了, 或者您在 db/item_avail.txt 中明确
+// 指定某个物品是无效的之后, 此物品就会被服务端当作“不可用”物品. 
+// 
+// 0x1: 检查并移除背包中的“不可用”物品
+// 0x2: 检查并移除手推车中的“不可用”物品
+// 0x4: 检查并移除仓库中的“不可用”物品
 item_check: 0x0
 
-// How much time must pass between item uses?
-// Only affects the delay between using items, prevents healing item abuse. Recommended ~500 ms
-// On officials this is 0, but it's set to 100ms as a measure against bots/macros.
+// 使用物品之间应该间隔多少毫秒? 
+// 这个选项只会影响“可用类物品”和“治愈类物品”, 防止滥用他们.
+//
+// 推荐设置小于等于 500 毫秒的值
+// 在官服中这个选项的值为 0 毫秒, 这也意味着玩家可以连续的使用道具. 
+// 默认 rAthena 设置为 100 毫秒, 防止外挂和内挂来滥用道具. 
 item_use_interval: 100
 
-// How much time must pass between cash food uses? Default: 60000 (1 min)
+// 商城料理的食用间隔时间是多少? 默认为 60000 毫秒, 即 1 分钟
+// 有些玩家可能会希望开始刷怪时把六大属性的料理统统吃个遍再开始打怪, 
+// 遇到这种情况的话, 建议此选项的值改成 0,
+// 否则他吃一个料理后, 就要等 1 分钟才能吃另一个. 
 cashfood_use_interval: 60000
 
 // Required level of bNoMagicDamage before Status Changes are blocked (Golden Thief Bug card).
@@ -81,29 +104,44 @@ cashfood_use_interval: 60000
 // which reduces magic damage by 40%, but does not blocks status changes.
 gtb_sc_immunity: 50
 
-// Enable autospell card effects to stack?
-// NOTE: Different cards that grant the same skill will both 
-// always work independently of each other regardless of setting.
+// 是否允许通过叠加多张相同卡片的方式, 来提高“自动念咒”卡片的效果触发机率?
+// 
+// 自动念咒卡片是指:
+// 使用脚本中具有 bAutoSpell 和 bAutoSpellWhenHit 这两种 bonus 效果的卡片.
+// 如: 七彩大嘴鸟卡片(4161) 和 狮鹫兽卡片(4163)
+//
+// 举个例子:
+// 七彩大嘴鸟卡片的剧本是 bonus3 bAutoSpellWhenHit,"PR_GLORIA",1,50;
+// 解读为当受到物理伤害时, 有 5% 的概率施放 1 级幸运之颂歌
+//
+// 那么当此选项为 yes 的话, 玩家插入了 3 张七彩大嘴鸟卡片 (假设有可以插 3 张卡片的头饰存在)
+// 效果会变成: 解读为当受到物理伤害时, 有 15% 的概率施放 1 级幸运之颂歌 (3 x 5% = 15%)
 autospell_stacking: no
 
-// Allow the consumption of usable items that are disabled by item_noequip.txt? (Note 1)
-// no = can't be consumed
-// yes = consumed with no effect
+// 使用 item_noequip.txt 中禁用的道具时, 是否会消耗它? (开关选项)
+//  no = 禁止使用道具, 且不消耗
+// yes = 禁止使用道具, 消耗道具, 但是没有任何效果
 allow_consume_restricted_item: no
 
-// Allow equipping items that are disabled by item_noequip.txt? (Note 1)
-// no = can't be equipped and will be unequipped when entering the map
-// yes = can be equipped but gives no effect
-// If the equip is compounded with restricted card(s), it ignores this check but still gives no effect.
+// 是否允许穿戴在 item_noequip.txt 中禁用的装备? (开关选项)
+// no = 禁止穿戴, 并且在进入目标地图时自动脱下被禁用的装备.
+// yes = 能够穿戴, 但是装备实际上没有任何效果
+// 
+// 当可用的装备插入了被禁用的一张或多张卡片的话,
+// 那么装备本身是不会被此选项干扰的, 但插在上面被禁用的卡片将失去效果.
 allow_equip_restricted_item: yes
 
 // Allow changing of equipment while interacting with NPCs? (Note 1)
 // Default: yes
 item_enabled_npc: yes
 
-// Allow map_flooritem to check if item is droppable? (Note 1)
-// If yes, undroppable items will be destroyed instead of appearing on the map when a player's inventory is full.
-// Default: yes
+// 是否在物品掉落到地面时, 检查其是否被“禁止掉落到地面”? (开关选项)
+// 
+// 当玩家背包满了之后在获得物品的话, 物品按道理会正常掉落在地面上. 
+// 若设置为 yes, 那么掉落到地面上的物品如果被设置为“禁止掉落到地面”的话, 
+// 那么物品将会被强制销毁.
+// 
+// 默认值为: yes
 item_flooritem_check: yes
 
 // Set default bound type for item_flag &8 (see db/[pre-]re/item_flag.txt
