--- a/conf/battle/party.conf
+++ b/conf/battle/party.conf
@@ -12,15 +12,16 @@
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-// If someone steals (gank/steal skills), show name in party? (Note 1)
+// 队伍中有人偷到了物品时,
+// 是否将物品的名称公告给队伍全员知道? (开关选项)
 show_steal_in_same_party: no
 
-// Interval before updating the party-member map mini-dots (milliseconds)
+// 每隔多长时间更新一次队伍成员在小地图上的位置 (单位为毫秒)? 
 party_update_interval: 1000
 
-// Method used to update party-mate hp-bars:
-// 0: Aegis - bar is updated every time HP changes (bandwidth intensive)
-// 1: rAthena - bar is updated with the party map dots (up to 1 second delay)
+// 更新队伍伙伴的 HP 血条的方式:
+// 0: 仿官服方式 - 只要队伍伙伴的 HP 有变化, 就立刻更新数据给其他队友 (对服务器带宽要求更高)
+// 1: 模拟器方式 - 更新 HP 血条使用和小地图位置一样的策略, 每隔一段时间更新一次
 party_hp_mode: 0
 
 // NOTE:
@@ -31,31 +32,42 @@ party_hp_mode: 0
 // announce in the party which party-member received the item and what's he received? (Note 1)
 show_party_share_picker: yes
 
-// What types of items are going to be announced when 'show_party_share_picker' is active?
-// 1:   IT_HEALING,  2:   IT_UNKNOWN,  4:    IT_USABLE, 8:    IT_ETC,
-// 16:  IT_WEAPON,   32:  IT_ARMOR,    64:   IT_CARD,   128:  IT_PETEGG,
-// 256: IT_PETARMOR, 512: IT_UNKNOWN2, 1024: IT_AMMO,   2048: IT_DELAYCONSUME
-// 262144: IT_CASH
+// 当 show_party_share_picker 为启用(yes)时, 捡到什么类型的物品会被公告?
+// 1:      治愈类,    2:   未知物品,  4:    消耗类,      8:    其他物品,
+// 16:     武器类,    32:  防具类,    64:   卡片,        128:  宠物蛋,
+// 256:    宠物装备,  512: 未知物品2, 1024: 箭矢弹药类,  2048: 延迟消耗类
+// 262144: 现金道具类
+// 默认值为: 112 (武器类 + 防具类 + 卡片)
 show_picker.item_type: 112
 
-// Method of distribution when item party share is enabled in a party:
+// 当组队设置中的“捡到的物品如何分配”选项被设置为“均等分配”时, 服务端的物品分配方式:
 // 
-// 0: Normal (item goes to a random party member)
-// 1: Item Share is disabled for non-mob drops (player/pet drops)
-// 2: Round Robin (items are distributed evenly and in order among members)
-// 3: 1+2
+// 0: 普通方式 (只要从地面上捡取的物品, 都将随机分配给队伍中的某个队员)
+// 1: 仅随机分配魔物掉落的道具 (其他比如自己宠物拾取的道具, 或者玩家自己丢地上又捡起来的道具, 禁止随机分配)
+// 2: 轮询分配方式 (从地面上捡取到的物品, 会按顺序的、均匀的分配给队伍中的各个成员)
+// 3: 1+2 (仅随机分配魔物掉落的道具 + 轮询分配方式)
 party_item_share_type: 0
 
-// Is exp/item sharing disabled for idle members in the party?
-// Set to no, or the amount of seconds (NOT milliseconds) that need to pass before considering
-// a character idle.
-// Characters in a chat/vending are always considered idle.
-// A character's idle status is reset upon item use/skill use/attack (auto attack counts too)/movement.
+// 组队经验/物品分享的时候, 是否跳过正在发呆的队员?
+// 设置为 no 则表示不跳过, 发呆的队员也能享受到经验均分和物品均分.
+// 否则, 你可以设置一个秒数, 当玩家没有做出一些特定的动作超过你设定的秒数时, 那么他就会被判断为发呆.
+// 在聊天室中的玩家以及摆摊中的玩家, 无论过几秒, 都会被直接认为在发呆.
+//
+// 上述提到的特定动作为:
+// 使用物品、技能、攻击、移动, 只要超过设定的秒数没做这些事情, 那么就会被认为在发呆.
 idle_no_share: no
 
-// Give additional experience bonus per party-member involved on even-share parties (excluding yourself)?
-// ex. If set to 10, an even-share party of 5 people will receive +40% exp (4 members * 10% exp):
-//     140% party experience in total, so each member receives 140%/5 = 28% exp (instead of 20%).
+// 队伍中能够均分经验的人数每多一人, 打怪经验增加百分之多少? (排除自己)?
+// 加成公式为: +(队伍总人数 - 1) x party_even_share_bonus%
+// 
+// 举个例子:
+// 假设队伍中包括自己一共有 5 个人, 在经验获取方式设置为“均等分配”的情况下, 
+// 打死一只原本有 2000 基础/职业经验的魔物: 
+// 
+// 若设置为  0 (即 0%) 的话 - 则每个人可获得基础/职业经验 = 2000 x (100% + (5 - 1) x  0%) = 2000 x 100% = 2000 / 5 = 400
+// 若设置为 10 (即10%) 的话 - 则每个人可获得基础/职业经验 = 2000 x (100% + (5 - 1) x 10%) = 2000 x 140% = 2800 / 5 = 560
+// 
+// 实际上, 设置为 0 表示此机制不启用, 上面举例只是为了让大家知道经验差距.
 party_even_share_bonus: 0
 
 // 无论玩家是否在公会中, 都在角色名附近显示出队伍名称.
@@ -63,8 +75,8 @@ party_even_share_bonus: 0
 // 默认值: rAthena 官方默认为 no, 熊猫模拟器为 yes
 display_party_name: yes
 
-// Prevent multiple characters of the same account to join the same party. (Note 1)
+// 是否防止同个账号的多个角色能够加入同一个队伍中? (开关选项)
 block_account_in_same_party: yes
 
-// Prevent changing the party leader if the specified player is not on the same map (Note 1)
+// 当试图转移队长职务给其他玩家时, 是否要求目标玩家与当前队长在同一张地图? (开关选项)
 change_party_leader_samemap: yes
