--- a/conf/battle/player.conf
+++ b/conf/battle/player.conf
@@ -12,33 +12,48 @@
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-// Players' maximum HP rate? (Default is 100)
+// 玩家的最大 HP 倍率是多少? (百分比选项)
 hp_rate: 100
 
-// Players' maximum SP rate? (Default is 100)
+// 玩家的最大 SP 倍率是多少? (百分比选项)
 sp_rate: 100
 
 // Whether or not cards and attributes of the left hand are applied to the right hand attack (Note 1)
 // (It is 'yes' on official servers)
 left_cardfix_to_right: yes
 
-// The amount of HP a player will respawn with, 0 is default.
-// (Unit is in percentage of total HP, 100 is full heal of HP, 0 is respawn with 1HP total.)
+// 玩家死亡回城复活后, 角色将剩余百分之几的HP? (百分比选项, 默认值为 0)
+// 填写 100 则表示死亡回城后满 HP, 填写 0 则表示复活后只有 1HP. 
 restart_hp_rate: 0
 
-// The amount of SP a player will respawn with, 0 is default.
-// (Unit is in percentage of total SP, 100 is full heal of SP, 0 is respawn with 1SP total.)
+// 玩家死亡回城复活后, 角色将剩余百分之几的SP? (百分比选项, 默认值为 0)
+// 填写 100 则表示死亡回城后满 SP, 填写 0 则表示复活后只有 1SP. 
 restart_sp_rate: 0
 
-// Can a normal player by-pass the skill tree? (Note 1)
+// 玩家和人工生命体是否能够无视技能树限制来升级技能? (开关选项)
+// 
+// 当你将 ALT+S 的技能列表切换成“迷你模式”之后, 
+// 我们可以看到, 一些任务技能之外的普通技能是没有 LvUp 按钮可以点击的, 
+// 这是因为您还没有将学习此技能所需的前置技能, 加到要求的等级. 
+//
+// 如果你打开此选项, 那么这些前置技能条件将自动被无视, 
+// 也就是说, 就算没有学习必须的前置技能, 客户端也会出现 LvUp 按钮, 
+// 允许你可以把这技能给学了. 
+//
+// 注意: 修改此选项后, 就算 @reloadbattleconf 后也必须小退一下才能生效. 
 player_skillfree: no
 
 // When set to yes, forces skill points gained from 1st class to be put into 1st class
 // skills, and forces novice skill points to be put into the basic skill. (Note 1)
 player_skillup_limit: yes
 
-// Quest skills can be learned? (Note 1)
-// Setting this to yes can open an exploit on your server!
+// 任务技能是否可以被直接学习? (开关选项)
+// 若设置为 yes 的话, 玩家可以直接使用技能点去学习任务技能.
+// 不过玩家学习时, 需要点击技能面板右上角的 - 号, 切换到“精简模式”才可以.
+// 此外, 使用 @allskill 指令的时候, 所有任务技能也将能习得并满级.
+// 
+// 注意: 这会导致玩家无需完成技能任务, 就可以直接习得任务技能.
+// 默认值为: no
 quest_skill_learn: no
 
 // When skills are reset, quest skills are reset as well? (Note 1)
@@ -55,41 +70,47 @@ basic_skill_check: yes
 // If you attack a monster, it will attack you back regardless of this setting.
 player_invincible_time: 5000
 
-// The time interval for HP to restore naturally. (in milliseconds)
+// HP 的自然恢复间隔时间 (单位为毫秒)
 natural_healhp_interval: 6000
 
-// The time interval for SP to restore naturally. (in milliseconds)
+// SP 的自然恢复间隔时间 (单位为毫秒)
 natural_healsp_interval: 8000
 
-// Automatic healing skill's time interval. (in milliseconds)
+// 被动恢复技能(比如禅心和快速回复等)的恢复间隔时间 (单位为毫秒)
 natural_heal_skill_interval: 10000
 
-// The maximum weight for a character to carry when the character stops healing naturally. (in %)
-// For renewal: Requires client 20171025 or newer to display properly
+// 当负重量超过百分之多少时, 不再自然恢复角色的HP和SP ?
+// 提示: 调整此选项后, 建议更新客户端 msgstringtable.txt 中第 307 和 309 行附近的提示文字.
+// 
+// 以下的 natural_heal_weight_rate 针对复兴前版本, 对复兴后版本无效 (默认值 50)
+// 以下的 natural_heal_weight_rate_renewal 针对复兴后版本, 对复兴前版本无效 (默认值 70)
 natural_heal_weight_rate: 50
 natural_heal_weight_rate_renewal: 70
 
-// Maximum atk speed. (Default 190, Highest allowed 199)
+// 玩家的最大攻击速度. (默认值为 190, 最高能填写到 199)
 max_aspd: 190
 
-// Same as max_aspd, but for 3rd classes. (Default 193, Highest allowed 199)
+// 三转职业的最大攻击速度. (默认值为 193, 最高能填写到 199)
 max_third_aspd: 193
 
-// Max ASPD for extended class (Kagerou/Oboro and Rebellion). (Default 193, Highest allowed 199)
+// 拓展职业的最大攻击速度. (默认值为 193, 最高能填写到 199)
+// 拓展职业是指: 日影忍者/月影忍者 和 反叛者等
 max_extended_aspd: 193
 
 // Maximum walk speed rate (200 would be capped to twice the normal speed)
 max_walk_speed: 300
 
-// Maximum HPs depending on base level. Default values are:
-// Lv 99:  330000
-// Lv150:  660000
-// Lv175: 1100000
+// 玩家最大的 HP 上限, 上限根据玩家的基础等级分为三个阶段
+// Lv 1 ~ 99 的默认值为:  330000
+// Lv 100 ~ 150 的默认值为:  660000
+// Lv 151 ~ 175 甚至更高等级的默认值为: 1100000
+// 以上改动参考自韩服的调整: http://ro.gnjoy.com/news/notice/View.asp?BBSMode=10001&seq=6322
+// 注意: 下面的 max_hp 字段名虽然没写等级, 但是它实际上就是 151 级开始的最大 HP 限制
 max_hp_lv99: 330000
 max_hp_lv150: 660000
 max_hp: 1100000
 
-// Maximum SP. (Default is 1000000)
+// 玩家最大的 SP 上限. (默认值为 1000000)
 max_sp: 1000000
 
 // Maximum params/stats for each class. (str, agi, vit, int, dex, and luk)
@@ -125,10 +146,12 @@ max_def: 99
 // (eg: if set to 10, every armor point above the max becomes 10 vit defense points)
 over_def_bonus: 0
 
-// Max weight carts can hold.
+// 手推车在默认情况下的最大负重量.
+// 当你习得基因学者的“手推车强化”技能之后, 手推车的最大负重量还会进一步提升.
 max_cart_weight: 8000
 
-// Prevent logout of players after being hit for how long (in ms, 0 disables)?
+// 攻击、受伤或进入地图后，必须等待多久才能登出 (单位为毫秒, 0 表示不用等)?
+// 提示: 调整此选项后, 建议更新客户端 msgstringtable.txt 中第 503 行附近的提示文字.
 prevent_logout: 10000
 
 // When should the server prevent a player from logging out? Have no effect if prevent_logout is disabled. (Note 3)
@@ -151,15 +174,23 @@ show_hp_sp_gain: yes
 // NOTE: this setting enables friend auto-adding and auto-deletion.
 friend_auto_add: yes
 
-// Are simultaneous trade/party/guild invite requests automatically rejected?
+// 当同时进行交易/组队/公会邀请的时候, 是否自动拒绝?
+// 
+// 举个例子:
+// 当 A 玩家正在邀请 C 玩家进行交易, 在 C 玩家没点确认交易之前,
+// B 玩家想邀请 C 玩家进行组队, 这时候地图服务器是否会自动先拒绝 B 玩家的组队邀请.
+// 
+// 设置为 no 则会自动拒绝, 设置为 yes 则不会 (每种邀请弹窗都会显示给 C 玩家, 让他选).
+//
+// 默认值为: yes
 invite_request_check: yes
 
-// Players' will drop a 'Skull' when killed?
-// Note: The 'Skull' item (ID 7420) is trade restricted by default. Please check
-// the item_trade database to adjust accordingly.
-// 0 = Disabled
-// 1 = Dropped only in PvP maps
-// 2 = Dropped in all situations
+// 当玩家死亡时, 是否会掉落一个带有角色名的'骷髅'?
+// 注意: '骷髅' (物品编号 7420) 默认情况下会有交易限制. 
+// 请检查 db/[pre-]re/item_trade.txt 数据库并根据你的需要来调整其中的设置.
+// 0 = 不掉落
+// 1 = 在 PvP 地图中死亡才会掉落
+// 2 = 无论在什么地图都掉落
 bone_drop: 0
 
 // Do mounted (on Peco) characters increase their size?
@@ -170,9 +201,13 @@ bone_drop: 0
 //	and Baby Classes on Peco have Medium Size
 character_size: 0
 
-// Idle characters can receive autoloot?
-// Set to the time in seconds where an idle character will stop receiving
-// items from Autoloot (0: disabled).
+// 发呆的角色是否可以使用 autoloot 自动拾取机制来捡东西?
+// 设置一个秒数, 如果角色发呆超过你所设置的秒数, 那么就停止他的 autoloot 自动拾取功能.
+// 
+// 提示: 这并不会关闭它的 autoloot 指令, 只要他从发呆状态中“清醒”过来, 
+// 那么自动就恢复了 autoloot 拾取功能.
+// 
+// 设置为 0 表示不使用这个机制 (发呆了也照样能够 autoloot 自动拾取)
 idle_no_autoloot: 0
 
 // Minimum distance a vending/chat room must be from a NPC in order to be placed.
@@ -218,23 +253,37 @@ vip_zeny_penalty: 0
 // Default: 2
 vip_bm_increase: 2
 
-// Item drop increase. Setting to 0 will disable.
-// Note: 50 = 50% item_drop increase.
-// For item_rate = 200: 200 * 50 / 100 = 100 bonus rate added to the 200 base giving total rate of 300.
-// Default: 50
+// VIP 玩家打怪获得物品的掉率增加多少? 设置为 0 表示不增加掉率.
+// 提示: 此选项填写 50 表示增加 50% 的物品掉率 (默认值为: 50).
+// 假设物品掉率为 150%, 那么 VIP 玩家的物品掉率会增加 150% x 50 / 100 = 75%, 
+// 最终掉率为 150% + 75% = 225%.
 vip_drop_increase: 50
 
-// Gemstone requirement.
-// Can the VIP Group ignore Gemstone requirement for skills?
-// 0 = Disable
-// 1 = Behave like Mistress Card
-// 2 = Remove all gemstone requirements (default)
+// 魔力矿石消耗设置
+// VIP 玩家在释放技能(比如传送之阵等)的时候, 是否不用消耗魔力矿石?
+// 0 = 照常消耗
+// 1 = 与蜂后卡片的效果一致
+// 2 = 无论如何都不消耗魔力矿石 (默认值)
 vip_gemstone: 2
 
-// Will display rate information (EXP, Drop, and Death penalty message)? (Note 1)
+// 启用VIP会员机制后, 玩家登入游戏时是否显示服务器的倍率信息? (开关选项)
 vip_disp_rate: yes
 
-// Revive dead player while warping? (Note 1)
+// 传送一个已经死亡的玩家之前, 是否先将其复活?  (开关选项)
+// 注意: 不复活也一样可以传送, 不过传送到目的地后, 玩家将保持死亡状态. 
+// 
+// 受此开关影响的脚本指令包括但不限: 
+// - warp
+// - areawarp
+// - warpchar
+// - warpparty 
+// - warpguild
+// - warpwaitingpc
+// - mapwarp
+// - warppartner
+// - instance_warpall
+// 
+// 除了上面的这些脚本指令, 还有一些传送玩家相关的 GM 指令, 也会受此选项影响
 revive_onwarp: yes
 
 // Minimum base level to receives Taekwon Ranker Bonus
@@ -259,20 +308,20 @@ fame_pharmacy_5: 3
 fame_pharmacy_7: 10
 fame_pharmacy_10: 50
 
-// How the server should measure the character's idle time? (Note 3)
-// 0x001 - Walk Request
-// 0x002 - UseSkillToID Request (Targetted skill use attempt)
-// 0x004 - UseSkillToPos Request (AoE skill use attempt)
-// 0x008 - UseItem Request (Including equip/unequip)
-// 0x010 - Attack Request
-// 0x020 - Chat Request (Whisper, Party, Guild, Battlegrounds, etc)
-// 0x040 - Sit/Standup Request
-// 0x080 - Emotion Request
-// 0x100 - DropItem Request
-// 0x200 - @/#Command Request
-// Please note that at least 1 option has to be enabled.
-// Be mindful that the more options used, the easier it becomes to cheat features that rely on idletime (e.g. checkidle()).
-// Default: walk (0x1) + useskilltoid (0x2) + useskilltopos (0x4) + useitem (0x8) + attack (0x10) = 0x1F
+// 地图服务器当玩家进行什么操作时, 会认为角色已经从发呆状态中醒来? (掩码选项)
+// 0x001 - 走路移动
+// 0x002 - 使用指定目标的单体技能时
+// 0x004 - 使用指定地面的群体技能时
+// 0x008 - 使用物品时 (包括穿戴/脱下装备)
+// 0x010 - 请求平砍攻击某个目标时
+// 0x020 - 进行聊天时 (私聊, 队伍, 公会, 战场等频道)
+// 0x040 - 坐下/站立时
+// 0x080 - 做出表情动作时
+// 0x100 - 丢弃物品时
+// 0x200 - 使用 @/# 指令时
+// 请至少启用一个选项, 否则一旦玩家被判定为发呆, 无论做什么都醒不过来.
+// 注意: 启用的选项越多, 则客户端越容易欺骗地图服务器角色没有发呆 (比如当选项包含 0x020 时, 使用按键精灵定时反复发送无用的聊天信息).
+// 默认值为: 走路移动 (0x1) + 使用指定目标的单体技能时 (0x2) + 使用指定地面的群体技能时 (0x4) + 使用物品时 (0x8) + 请求平砍攻击某个目标时 (0x10) = 0x1F
 idletime_option: 0x1F
 
 // Adjust the summoner class' special traits.
