--- a/conf/battle/status.conf
+++ b/conf/battle/status.conf
@@ -25,22 +25,49 @@
 // 如果不只是魔物, 还想加上佣兵, 那么就是 2 + 16 填写 18 就对了. 
 status_cast_cancel: 0
 
-// Will certain skill status-changes be removed on logout?
-// This mimics official servers, where Extremity Fist's no SP regen,
-// Strip Equipment, and some other buffs are removed when you logout. Setting is:
-// 0 = remove nothing.
-// 1 = remove negative buffs (stripping, EF)
-// 2 = remove positive buffs (maximize power, steel body...)
-// 3 = remove both negative and positive buffs.
+// 登出游戏时, 是否移除角色身上的技能状态 (包括增益的和负面的)?
+// 
+// 这是模仿官服的设置, 使用阿修罗霸凰拳后一段时间不能回复SP的状态, 
+// 被流氓卸除装备后一段时间内禁止再穿戴, 以及其他状态,
+// 是否会随着角色登出而移除.
+// 
+// 此选项的可选值如下:
+// 0 = 不移除技能状态, 下线时候有什么状态, 下次登录还一样...
+// 1 = 移除负面状态(比如) (卸除武器、卸除头盔、变成兽人面孔等)
+// 2 = 移除增益状态(比如武器值最大化、金刚不坏等)
+// 3 = 同时移除负面状态和增益状态
 debuff_on_logout: 3
 
-// Adjustment for the natural rate of resistance from status changes.
-// If 50, status defense is halved, and you need twice as much stats to block
-// them (eg: 200 vit to completely block stun)
+// 仙境传说拥有“状态免疫”机制, 随着玩家素质点以及角色等级的增减, 
+// 是可以降低中某些负面状态的概率, 或者是缩短自己受负面状态影响的
+// 时间的. 负面状态包括但不限: 冰冻、昏迷、石化、中毒等
+// 
+// 此选项可以调整状态的自然抗性比例
+// 比如, 正常情况下的话, 你需要100点VIT就可以完全防止被击晕(进入晕眩状态)
+// 但是如果此选项的值改成50的话, 那么意味着你原来100点VIT带来的效果, 
+// 只剩下了50%, 也就是说你现在需要200点VIT才可以完全防止被击晕. 
+// 
+// 当然, 若你将此选项调整成了200, 那么说明原来的1点VIT能带来的效果
+// 将变成2倍. 也就是说, 你只需要加50点VIT, 就可以完全防止被击晕. 
+// 
+// pc_status_def_rate 是针对玩家的、mob_status_def_rate 是针对魔物的
 pc_status_def_rate: 100
 mob_status_def_rate: 100
 
-// Maximum resistance to status changes. (100 = 100%)
-// NOTE: Cards and equipment can go over this limit, so it only applies to natural resist.
+// 状态的自然抗性最大上限. (100 = 100%)
+// 注意: 卡片或者装备效果不会被此选项影响, 也就是说此选项只对
+// 状态的自然抗性有效
+// 
+// 什么是状态的自然抗性? 
+// 状态的自然抗性就是指玩家的素质点和基础等级计算得来的天然抗性
+// 
+// 那么这个选项有什么作用呢? 举个例子
+// 在正常情况下, 若你的VIT加到100的话, 那么你就能完全防止被击晕
+// 那么如果我们希望, 无论玩家VIT加到多少, 撑死了最多只有90%的概率防止
+// 被击晕, 保留10%会被击晕的概率呢?  
+//
+// 很简单, 只需要将此选项设置为 90 即可
+// 
+// pc_max_status_def 是针对玩家的、mob_max_status_def 是针对魔物的
 pc_max_status_def: 100
 mob_max_status_def: 100
