--- a/conf/battle/battle.conf
+++ b/conf/battle/battle.conf
@@ -1,12 +1,15 @@
 ﻿//--------------------------------------------------------------
-// rAthena Battle Configuration File
-// Originally Translated by Peter Kieser <pfak@telus.net>
-// Made in to plainer English by Ancyker
+// 熊猫模拟器战斗配置选项
+// 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
-// Note 1: Value is a config switch (on/off, yes/no or 1/0)
-// Note 2: Value is in percents (100 means 100%)
-// Note 3: Value is a bit field. If no description is given,
-//         assume unit types (1: Pc, 2: Mob, 4: Pet, 8: Homun, 16: Mercenary, 128: NPC, 512: Elemental)
+//   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
+// 百分比选项: 填写 100 即表示 100%
+//   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
+//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
+//             128: NPC, 512: 元素精灵
+//             掩码选项一个数值可以表示里面有多个内容. 
+//             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
 // Who should have a baseatk value (makes str affect damage)? (Note 3)
@@ -16,19 +19,27 @@ enable_baseatk_renewal: 0x29F
 // Who can have perfect flee? (Note 3)
 enable_perfect_flee: 1
 
-// Who can have critical attacks? (Note 3)
-// (Note that there are some skills that always do critical hit regardless of this)
+// 哪些单位能够产生暴击? (掩码选项)
+// 注意: 有些技能会无视此设置, 该出现暴击的时候还是会出现暴击的
+// 默认值是 17, 表示此选项包含: 玩家(1) + 佣兵(16)
 enable_critical: 17
 
-// Critical adjustment rate for non-players (Note 2)
+// 魔物产生暴击的倍率 (百分比选项)
 mob_critical_rate: 100
+
+// 除了玩家和魔物外, 其他单位(宠物、生命体、佣兵)产生暴击的倍率 (百分比选项)
 critical_rate: 100
 
-// Should normal attacks give you a walk delay? (Note 3)
-// If no, characters can move as soon as they start an attack (attack animation
-// or walk animation may be omitted client-side, causing cropped attacks or
-// monsters that teleport to you)
-// Otherwise, the delay is equal to the 'attack animation' (amotion)
+// 普通攻击是否会导致指定单位有移动延迟? (掩码选项)
+// 
+// 若将某种单位设置为不会导致移动延迟, 那么它将在攻击发起之后立刻就可以移动
+// (攻击动画过程和移动动画过程或许会被客户端省略, 可能会产生攻击动画没播放完毕、
+// 或者魔物瞬间移动到你身边的错觉)
+// 
+// 否则, 这个'移动延迟'的时间长度将等于单位的'攻击动画'时间,
+// 这也意味着只有攻击动画播放结束了, 指定的单位才能够进行移动
+//
+// 默认值是 15, 表示此选项包含: 玩家(1) + 魔物(2) + 宠物(4) + 生命体(8)
 attack_walk_delay: 15
 
 // Move-delay adjustment after being hit. (Note 2)
@@ -61,36 +72,60 @@ attribute_recover: no
 min_hitrate: 5
 max_hitrate: 100
 
-// Type of penalty that is applied to FLEE when more than agi_penalty_count monsters are targetting player
-// 0 = no penalty is applied
-// 1 = agi_penalty_num is reduced from FLEE as a %
-// 2 = agi_penalty_num is reduced from FLEE as an exact amount
+// 当有超过 agi_penalty_count 指定个数的魔物把玩家当做攻击目标时,
+// 以哪种方式对玩家的回避率进行减算(下称为回避率惩罚)?
+// 
+// 0 = 不减少回避率
+// 1 = 减少 agi_penalty_num 选项指定百分比的回避率
+//     例如: 当 agi_penalty_num 填写 10, 则意味着围攻你的敌人在
+//           超过 agi_penalty_count 设定的数量之后, 每增加一个敌人你就会降低 10% 的回避率
+// 2 = 减少 agi_penalty_num 选项指定数值的回避率
+//     例如: 当 agi_penalty_num 填写 20, 则意味着围攻你的敌人在
+//           超过 agi_penalty_count 设定的数量之后, 每增加一个敌人你就会降低 20 点回避率
+//
+// 在现实生活中, 如果你动作很灵敏, 和一个人打架时你可以轻松回避的话,
+// 那么当你以一敌十的时候, 你的回避率肯定是会降低的...
+// 
+// 这个机制与此类似, 当玩家被很多魔物围攻的时候, 你的回避率也会相应减少.
 agi_penalty_type: 1
 
-// When agi penalty is enabled, to whom it should apply to? (Note 3)
-// By default, only players get the penalty.
+// 当回避率惩罚机制被启用时(或者说, 当 agi_penalty_type 不等于 0 时), 
+// 哪种类型的单位会受到该机制的影响? (掩码选项)
+// 
+// 默认值是 1, 表示只有 玩家(1) 会受到影响.
 agi_penalty_target: 1
 
-// Amount of enemies required to be targetting player before FLEE begins to be penalized
+// 超过多少个敌人将自己作为攻击目标时, 就开始触发回避率惩罚机制?
 agi_penalty_count: 3
 
-// Amount of FLEE penalized per each attacking monster more than agi_penalty_count
+// 当攻击自己的敌人数量大于 agi_penalty_count 指定的魔物数量后, 
+// 每增加一个敌人, 扣减多少回避率?
+// 如果 agi_penalty_type 为 1 则这里表示百分比, 为 2 则表示具体数值
 agi_penalty_num: 10
 
-// Type of penalty that is applied to both equipment and vit DEF when more than vit_penalty_count monsters are targetting player
-// 0 = no penalty is applied
-// 1 = vit_penalty_num is reduced from DEF as a %
-// 2 = vit_penalty_num is reduced from DEF as an exact amount
+// 当有超过 vit_penalty_count 指定个数的魔物把玩家当做攻击目标时,
+// 以哪种方式对玩家的VIT属性带来的物理防御力进行减算(下称为物理防御力惩罚)?
+// 0 = 不减少物理防御力
+// 1 = 减少 vit_penalty_num 选项指定百分比的物理防御力
+//     例如: 当 vit_penalty_num 填写 10, 则意味着围攻你的敌人在
+//           超过 vit_penalty_count 设定的数量之后, 每增加一个敌人你就会降低 10% 的物理防御力
+// 2 = 减少 vit_penalty_num 选项指定数值的物理防御力
+//     例如: 当 vit_penalty_num 填写 20, 则意味着围攻你的敌人在
+//           超过 vit_penalty_count 设定的数量之后, 每增加一个敌人你就会降低 20 点物理防御力
 vit_penalty_type: 1
 
-// When vit penalty is enabled, to whom it should apply to? (Note 3)
-// By default, only players get the penalty.
+// 当物理防御力惩罚机制被启用时(或者说, 当 vit_penalty_type 不等于 0 时), 
+// 哪种类型的单位会受到该机制的影响? (掩码选项)
+// 
+// 默认值是 1, 表示只有 玩家(1) 会受到影响.
 vit_penalty_target: 1
 
-// Amount of enemies required to be targetting player before defense begins to be penalized
+// 超过多少个敌人将自己作为攻击目标时, 就开始触发物理防御力惩罚机制?
 vit_penalty_count: 3
 
-// Amount of VIT defense penalized per each attacking monster more than vit_penalty_count
+// 当攻击自己的敌人数量大于 vit_penalty_count 指定的魔物数量后, 
+// 每增加一个敌人, 扣减多少物理防御力?
+// 如果 vit_penalty_type 为 1 则这里表示百分比, 为 2 则表示具体数值
 vit_penalty_num: 5
 
 // Use alternate method of DEF calculation for physical attacks.
@@ -130,16 +165,22 @@ equip_self_break_rate: 100
 // This affects the behaviour of skills like acid terror and meltdown
 equip_skill_break_rate: 100
 
-// Do weapon attacks have a attack speed delay before actual damage is applied? (Note 1)
-// NOTE: The official setting is yes, even thought it degrades performance a bit.
+// 使用武器进行攻击时, 是否会延迟一小会儿才产生实际伤害? (开关选项)
+// 提示: 官服的设置为 yes, 尽管这会降低一些性能.
 delay_battle_damage: yes
 
-// Are arrows/ammo consumed when used on a bow/gun?
-// 0 = No
-// 1 = Yes
-// 2 = Yes even for skills that do not specify arrow consumption when said 
-//     skill is weapon-based and used with ranged weapons (auto-guesses which 
-//     skills should consume ammo when it's acquired via a card or plagiarize)
+// 使用弓系武器或枪系武器时, 是否消耗箭矢或子弹?
+// 0 = 不消耗箭矢或子弹
+// 1 = 要消耗 (此为默认值)
+// 2 = 要消耗, 哪怕是使用的技能没有明确指定需要消耗何种箭矢. 
+//     只要这个技能是可造成伤害的, 技能要求的武器类型是“猎弓”、“左轮手枪”、“榴弹枪”, 
+//     且这个技能的攻击类型是weapon, 那么就算它不指定需要消耗那种箭矢, 
+//     也会默认消耗1个任何类型的弹药(箭矢、子弹等). 
+//     (哪怕技能是因为卡片效果习得的, 或是使用“抄袭、复制”技能抄来的, 
+//     都会自动判断是否需要消耗箭矢)
+//
+// 感觉选项 2 是为了“避免出现有些技能由于技能数据库不完整, 从而导致无需消耗箭矢”而
+// 设计的一个严格选项, 应该没有太大的用处. 
 arrow_decrement: 1
 
 // Should ammo be unequipped when unequipping a weapon?
@@ -160,8 +201,8 @@ autospell_check_range: no
 // Official behavior is "yes", setting this to "no" will knock the target back behind the attacker.
 knockback_left: yes
 
-// Can players use Falcons and Wargs at the same time? (Note 1)
-// This is not allowed on official servers.
+// 玩家是否能够同时召唤出猎鹰和野狼? (开关选项)
+// 由于官服默认禁止玩家同时召唤猎鹰和野狼, 所以这里的默认值为 no!
 warg_can_falcon: no
 
 // Should the target be able of dodging damage by snapping away to the edge of the screen?
