--- a/conf/battle/feature.conf
+++ b/conf/battle/feature.conf
@@ -1,74 +1,81 @@
+﻿//--------------------------------------------------------------
+// 熊猫模拟器战斗配置选项
+// 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
-// rAthena Feature Configuration File
-//--------------------------------------------------------------
-// Note 1: Value is a config switch (on/off, yes/no or 1/0)
-// Note 2: Value is in percents (100 means 100%)
-// Note 3: Value is a bit field. If no description is given,
-//         assume unit types (1: Pc, 2: Mob, 4: Pet, 8: Homun, 16: Mercenary, 128: NPC, 512: Elemental)
+//   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
+// 百分比选项: 填写 100 即表示 100%
+//   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
+//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
+//             128: NPC, 512: 元素精灵
+//             掩码选项一个数值可以表示里面有多个内容. 
+//             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-// Buying store (Note 1)
-// Requires: 2010-04-27aRagexeRE or later
+// 是否启用采购商店功能 (开关选项)
+// 此选项只有客户端版本大于等于 2010-04-27aRagexeRE 才支持. 
 feature.buying_store: on
 
-// Search stores (Note 1)
-// Requires: 2010-08-03aRagexeRE or later
+// 是否启用商店搜索功能 (开关选项)
+// 此选项只有客户端版本大于等于 2010-08-03aRagexeRE 才支持. 
 feature.search_stores: on
 
-// Atcommand suggestions (Note 1)
-// If one type incomplete atcommand, it will suggest the complete ones.
+// 是否启用管理员指令猜测 (开关选项)
+// 如果输入一个不完整的 GM 指令, 是否自动猜测出完整的 GM 指令并执行?
+// 例如: 执行 @ver 这个不完整的指令, 会自动猜测出你想执行的指令是 @version,
+//       然后自动执行 @version 指令, 并返回 @version 的结果.
 feature.atcommand_suggestions: off
 
-// Auction (Note 1)
-// Feature became unstable on clients 2012 onwards (exact date not known),
-// it has been fixed on clients 2013-05-15 onwards however.
-// Feature was removed again on clients 2014-11-12 and later.
+// 是否启用拍卖系统 (开关选项)
+// 此系统在 2012 年之前的客户端上使用非常不稳定,
+// 不过在 2013-05-15 之后的客户端中已经做了修复, 会稳定很多.
+// 拍卖功能在客户端版本大于等于 2014-11-12 中被移除.
 feature.auction: off
 
-// Warp suggestions (Note 1)
-// Show suggestions when attempting to @warp to a non-existent map?
+// 是否启用传送指令的地图名称猜测机制 (开关选项)
+// 当您使用 @warp 指令识图传送到一张不存在的地图时 (更多时候可能是手误, 打了错误的地图名)
+// 是否让系统提示给您一些和您输入的地图名相近的地图?
 feature.warp_suggestions: off
 
-// Banking (Note 1)
-// Requires: 2013-07-24aRagexe or later
+// 是否启用随身银行系统 (开关选项)
+// 此选项只有客户端版本大于等于 2013-07-24aRagexe 才支持. 
 feature.banking: on
 
-// Autotrade persistency (Note 1)
-// Should vendors that used @autotrade be restored after a restart?
+// 是否启用离线挂店持久化 (开关选项)
+// 离线挂店的玩家在地图服务器重启后, 是否自动上线并恢复摆摊?
 feature.autotrade: on
 
-// In which direction should respawned autotraders look?
-// Possible values are from 0-7
-// Default: 4(South)
-// -1 = Last player's direction
+// 离线挂店的玩家在地图服务器重启后, 角色身体朝向哪个方位?
+// 可选值是从 0 到 7 默认值是: 4(正南方)
+// -1 = 表示保持服务器重启之前的方位朝向
 feature.autotrade_direction: 4
 
-// Change player's head direction?
-// -1 = Last condition
-//  0 = Forward
-//  1 = Right
-//  2 = Left
+// 离线挂店的玩家在地图服务器重启后, 角色的头部面向哪个方位?
+// -1 = 表示保持服务器重启之前的方位朝向
+//  0 = 朝向正前方
+//  1 = 朝向右侧
+//  2 = 朝向左侧
 feature.autotrade_head_direction: 0
 
-// Do you want your autotraders to sit?
-// -1 = Last player's condition, sitting or standing
-//  0 = Standing
-//  1 = Sitting
+// 当通过离线挂店方式进入游戏时, 角色是否坐下?
+// -1 = 保持原状, 离线挂店时是站着的话那就站着, 反之亦然
+//  0 = 无论离线挂店时的状态是什么, 进入游戏时统统站立
+//  1 = 无论离线挂店时的状态是什么, 进入游戏时统统坐下
 feature.autotrade_sit: 1
 
-// Delay in miliseconds to open vending/buyingsotre after player logged in.
+// 离线挂店的玩家在角色自动上线后, 间隔多少毫秒才恢复摆摊?
 feature.autotrade_open_delay: 5000
 
 // Battlegrounds queue interface. Makes it possible to queue for a battleground anywhere using the battle menu.
 // Requires: 2012-04-10aRagexe or later
 feature.bgqueue: on
 
-// Roulette (Note 1)
-// Requires: 2014-10-22bRagexe or later
+// 是否启用乐透大转盘 (开关选项)
+// 此选项只有客户端版本大于等于 2014-10-22bRagexe 才支持.
 feature.roulette: on
 
-// Achievement (Note 1)
-// Requires: 2015-05-13aRagexe or later
+// 是否启用成就系统 (开关选项)
+// 此选项只有客户端版本大于等于 2015-05-13aRagexe 才支持. 
 feature.achievement: on
 
 // Equipment Switch (Note 1)
