--- a/conf/battle/gm.conf
+++ b/conf/battle/gm.conf
@@ -1,10 +1,15 @@
+﻿//--------------------------------------------------------------
+// 熊猫模拟器战斗配置选项
+// 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
-// rAthena Battle Configuration File
-// Originally Translated by Peter Kieser <pfak@telus.net>
-// Made in to plainer English by Ancyker
-//--------------------------------------------------------------
-// Note 1: Value is a config switch (on/off, yes/no or 1/0)
-// Note 2: Value is in percents (100 means 100%)
+//   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
+// 百分比选项: 填写 100 即表示 100%
+//   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
+//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
+//             128: NPC, 512: 元素精灵
+//             掩码选项一个数值可以表示里面有多个内容. 
+//             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
 // The symbol that will be used to recognize commands.
@@ -21,7 +26,12 @@ charcommand_symbol: #
 // The maximum quantity of monsters that can be summoned per GM command (0 denotes an unlimited quantity)
 atcommand_spawn_quantity_limit: 100
 
-// Maximum number of slave-clones that can be have by using the @slaveclone at command. (0 denotes unlimited quantity)
+// 当 GM 使用 @slaveclone 指令召唤出克隆随从时, 
+// 累计最多能召唤多少个随从? (填写 0 表示没有限制)
+//
+// 克隆随从是一种类似佣兵的东西, 它可以基于某个玩家的等级和素质点, 
+// 克隆出一个外观和能力上与指定玩家一模一样的魔物, 他会跟随着召唤他的主人, 
+// 能够主动攻击普通魔物和主人的敌对目标. 
 atcommand_slave_clone_limit: 25
 
 // If 'no', commands require exact player name. If 'yes', entering a partial 
