--- a/conf/battle/monster.conf
+++ b/conf/battle/monster.conf
@@ -1,12 +1,15 @@
 ﻿//--------------------------------------------------------------
-// rAthena Battle Configuration File
-// Originally Translated by Peter Kieser <pfak@telus.net>
-// Made in to plainer English by Ancyker
+// 熊猫模拟器战斗配置选项
+// 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
-// Note 1: Value is a config switch (on/off, yes/no or 1/0)
-// Note 2: Value is in percents (100 means 100%)
-// Note 3: Value is a bit field. If no description is given,
-//         assume unit types (1: Pc, 2: Mob, 4: Pet, 8: Homun, 16: Mercenary, 128: NPC, 512: Elemental)
+//   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
+// 百分比选项: 填写 100 即表示 100%
+//   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
+//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
+//             128: NPC, 512: 元素精灵
+//             掩码选项一个数值可以表示里面有多个内容. 
+//             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
 // The HP rate of MVPs. (Note 2)
@@ -66,12 +69,14 @@ monster_ai: 0
 // moving after they lost their target (hide, no line of sight, etc.).
 monster_chase_refresh: 3
 
-// Should mobs be able to be warped (add as needed)?
-// 0: Disable.
-// 1: Enable mob-warping when standing on NPC-warps
-// 2: Enable mob-warping when standing on Priest Warp Portals
-// 4: Disable warping when the target map is a 'nobranch' map.
-// 8: Enable mob-warping when standing on Dimensional Door
+// 魔物是否能够被传送走? (掩码选项)
+// 0: 不能 (默认).
+// 1: 如果魔物靠近普通传送点的话, 能被传送走(过图)
+// 2: 如果魔物走进牧师的“传送之阵”的话, 能被传送走
+// 4: 如果目标地图拥有 'nobranch' 地图标记, 则不会被传送.
+//
+// 如果希望既可以被传送之阵送走, 又不希望魔物被送到有 'nobranch' 标记的地图
+// 那么这个选项可以填写 6 (因为 2 + 4 = 6)
 mob_warp: 0
 
 // If these are set above 0, they define the time (in ms) during which monsters
@@ -79,7 +84,8 @@ mob_warp: 0
 mob_active_time: 0
 boss_active_time: 0
 
-// Mobs and Pets view-range adjustment (range2 column in the mob_db) (Note 2)
+// 魔物和宠物的视野范围倍率调整 (即 mob_db 中的 range2 字段) (百分比选项)
+// 主动攻击的魔物, 只会对视野范围内的玩家发起攻击. 
 view_range_rate: 100
 
 // Chase Range is the base minimum-chase that a mob gives before giving up
@@ -96,19 +102,24 @@ monster_eye_range_bonus: 0
 // Allow monsters to be aggresive and attack first? (Note 1)
 monster_active_enable: yes
 
-// Should the mob_db names override the mob names specified in the spawn files?
-// 0: No
-// 1: always use the mob_db Name column (english mob name)
-// 2: always use the mob_db JName column (original Kro mob name)
-override_mob_names: 0
+// 是否使用 mob_db 中的魔物名称来替换野怪召唤脚本中所使用的魔物名称?
+// 这里所谓的野怪召唤脚本是指使用 monster 语法(注意不是脚本指令), 在野外召唤出魔物的脚本.
+// 此类脚本一般集中这三个目录下: npc/mobs、npc/pre-re/mobs、npc/re/mobs
+// 
+// 0: 不覆盖, 使用召唤脚本写的魔物名称 (都是英文魔物名)
+// 1: 总是使用 mob_db 中的 Name 字段进行覆盖 (英文魔物名)
+// 2: 总是使用 mob_db 中的 JName 字段进行覆盖 (中文魔物名)
+//
+// 默认值为: 2
+override_mob_names: 2
 
 // Monster damage delay rate (Note 1)
 // Setting to no/0 is like they always have endure.
 monster_damage_delay_rate: 100
 
-// Looting monster actions.
-// 0 = Monster will consume the item.
-// 1 = Monster will not consume the item.
+// 控制拾取物品的魔物的行为方式.
+// 0: 若魔物在 mob_db 中的 mode 字段包含了 MD_LOOTER 属性的话, 那么会拾取物品.
+// 1: 无论魔物在 mob_db 中的 mode 字段是如何设置的, 都不允许拾取物品.
 monster_loot_type: 0
 
 // How does monster search floor item to loot?
@@ -127,7 +138,8 @@ mob_skill_rate: 100
 // setting.
 mob_skill_delay: 100
 
-// Rate of monsters on a map, 200 would be twice as many as normal. (Note 2)
+// 地图上的魔物密度倍率 (百分比选项)
+// 填写 200 的话, 地图上怪物的密度会变成之前的两倍.
 mob_count_rate: 100
 
 // Respawn rate of monsters on a map. 50 would make mobs respawn twice as fast (half delay time) (Note 2)
@@ -150,12 +162,24 @@ no_spawn_on_player: 0
 // map regardless of what the mob-spawn file says.
 force_random_spawn: no
 
-// Do summon slaves inherit the passive/aggressive traits of their master?
-// 0: No, retain original mode.
-// 1: Slaves are always aggressive.
-// 2: Slaves are always passive.
-// 3: Same as master's aggressive/passive state.
-// 4: Mode is overwritten with slave mode (official)
+// 当召唤随从魔物出来后, 随从魔物是否拥有和它主人一样的主动/被动攻击模式?
+// 
+// 注意: 
+// 这里的主人一般是指把随从召唤出来的某个魔物. 比如“蜂后”会召唤“毕帝特飞龙”随从, 
+// 此时“蜂后”就是“毕帝特飞龙”的主人.
+// 
+// 0: 不跟随主人, 保留随从的原始攻击模式.
+// 1: 随从永远处于主动攻击模式.
+// 2: 随从永远处于被动攻击模式.
+// 3: 拥有和它主人一样的主动/被动攻击模式.
+// 4: 不管随从原始属性如何, 强制覆盖成预制的随从模式(能移动、不随机移动、能攻击). (官服默认)
+//
+// 注意: 
+// 若玩家使用 @summon 指令召唤出随从魔物后, 无论此选项的设置如何, 随从魔物都将会处于主动攻击模式.
+//
+// 注意:
+// 若保持默认的选项 4 的话, 就算“蜂后”召唤出来的是一个不可移动的“绿草”, 
+// 那么也会变成一个神奇的“能移动、不随机移动、能攻击”的绿草. (可以自己修改试试, 挺有趣的)
 slaves_inherit_mode: 4
 
 // Do summon slaves have the same walking speed as their master?
@@ -223,10 +247,10 @@ mob_remove_damaged: yes
 // Delay before removing mobs from empty maps (default 5 min = 300 secs)
 mob_remove_delay: 300000
 
-// Defines on who the mob npc_event gets executed when a mob is killed.
-// Type 1: On the player that killed the mob (if killed by a non-player, resorts to type 0)
-// Type 0: On the player that did the most damage to the mob.
-// NOTE: This affects who gains the Castle when the Emperium is broken. 
+// 当魔物死亡后, 由谁来执行魔物的死亡事件.
+// 0: 由给予魔物最多伤害的玩家来执行.
+// 1: 由给予魔物最后一击的玩家来执行 (若给予最后一击的不是玩家, 那么将按照此选项为 0 来处理)
+// 注意: 这会影响公会战华丽金属破碎之后, 由谁获得城堡的逻辑. 
 mob_npc_event_type: 1
 
 // Time in milliseconds to activate protection against Kill Steal
@@ -238,12 +262,12 @@ ksprotection: 0
 // Should MVP slaves retain their target when summoned back to their master?
 mob_slave_keep_target: yes
 
-// Whether or not to spawn the mvp tomb.
-// See http://irowiki.org/wiki/MVP#Gravestone
+// 当 MVP 魔物死亡之后, 是否会产生墓碑?
+// 关于墓碑的资料详见 http://irowiki.org/wiki/MVP#Gravestone
 mvp_tomb_enabled: yes
 
-// Delay before the MVP tomb is spawned.
-// Default: 9 seconds
+// 当 MVP 魔物死亡后, 等待多长时间后生成它的墓碑.
+// 默认值为: 9 秒
 mvp_tomb_delay: 9000
 
 // Whether or not the size of specially summoned mobs influences experience, drop rates,
@@ -268,8 +292,8 @@ mob_size_influence: no
 mob_icewall_walk_block: 75
 boss_icewall_walk_block: 0
 
-// Should HP bars be shown for monsters?
-// 2012-04-04aRagexeRE or higher client required.
+// 是否显示魔物的血量条? (开关选项)
+// 此选项需要客户端在 2012-04-04aRagexeRE 及更新的版本才支持.
 monster_hp_bars_info: yes
 
 // Should a monster respawn and a warning printed to the map server when a monster couldn't move for a long time?
