--- a/conf/battle/pet.conf
+++ b/conf/battle/pet.conf
@@ -1,34 +1,41 @@
+﻿//--------------------------------------------------------------
+// 熊猫模拟器战斗配置选项
+// 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
-// rAthena Battle Configuration File
-// Originally Translated by Peter Kieser <pfak@telus.net>
-// Made in to plainer English by Ancyker
-//--------------------------------------------------------------
-// Note 1: Value is a config switch (on/off, yes/no or 1/0)
-// Note 2: Value is in percents (100 means 100%)
-// Note 3: Value is a bit field. If no description is given,
-//         assume unit types (1: Pc, 2: Mob, 4: Pet, 8: Homun, 16: Mercenary, 128: NPC, 512: Elemental)
+//   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
+// 百分比选项: 填写 100 即表示 100%
+//   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
+//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
+//             128: NPC, 512: 元素精灵
+//             掩码选项一个数值可以表示里面有多个内容. 
+//             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-// Rate for catching pets (Note 2)
+// 捕捉宠物的成功倍率 (百分比选项)
+//
+// 假设捕捉“波利”的成功率是 20%, 若将此选项设置为 200 的话,
+// 就表示捕捉成功率是默认设置的 2 倍, 也就是说捕捉成功率提升到了 40% 
 pet_catch_rate: 100
 
-// Can you name a pet more then once? (Note 1)
+// 是否可以无限次的为宠物改名? (开关选项)
+// 提示: 官服默认值是 no, 也就是说每只宠物只能被改一次名
 pet_rename: no
 
-// The rate a pet will get friendly by feeding it. (Note 2)
+// 喂养宠物时的亲密度上升倍率 (百分比选项)
 pet_friendly_rate: 100
 
-// The rate at which a pet will become hungry. (Note 2)
+// 宠物消化食物的时间倍率. (百分比选项)
+// 改成 200 的话, 意味着宠物将以 200% 的速度消化食物, 更容易变得饥饿.
 pet_hungry_delay_rate: 100
 
-// Does the pet need its equipment before it does its skill? (Note 1)
-// These bonuses are unofficial and found in the import/pet_db.yml
+// 宠物是否需要装备饰品才能使用技能? (开关选项)
 pet_equip_required: yes
 
-// When the master attacks a monster, whether or not the pet will also attack. (Note 1)
+// 主人攻击时, 宠物是否会一起攻击? (开关选项)
 pet_attack_support: no
 
-// When the master receives damage from the monster, whether or not the pet attacks back. (Note 1)
+// 主人被攻击时, 宠物是否会自动反击? (开关选项)
 pet_damage_support: no
 
 // Minimum intimacy necessary for a pet to support their master. Default is 900 
@@ -65,15 +72,15 @@ pet_max_stats: 99
 pet_max_atk1: 500
 pet_max_atk2: 1000
 
-// Are pets disabled during Guild Wars?
-// If set to yes, pets are automatically returned to egg when entering castles during WoE times
-// and hatching is forbidden within as well.
+// 在攻城战时, 宠物是否自动变成宠物蛋? 
+// 若设置为 yes , 那么进入公会城堡等 GVG 地图时, 宠物将会变成宠物蛋,
+// 并且 在GVG 地图中无法被孵化.
 pet_disable_in_gvg: no
 
 // Will does petskillattack2 fixed damage ignore plant infnite defense? (Note 1)
 pet_ignore_infinite_def: yes
 
-// Whether or not the pet will continue to attack when the master is dead. (Note 1)
+// 当宠物的主人死亡之后, 宠物是否会继续攻击? (开关选项)
 pet_master_dead: no
 
 // Send auto-feed notice even if the client setting is OFF (Note 1) 
