--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -541,13 +541,13 @@ Body:
 - Original: "Character '%s' (CID: %d, AID: %d) has sex '%c', but PACKETVER does not support per-character sex. Defaulting to 'U'.\n"
   Translation: ""
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @afk).\n"
-  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已使用 @afk 指令登出, 進入離開模式.\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 使用 @afk 指令登出了遊戲, 進入離開模式.\n"
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @autotrade).\n"
-  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已使用 @autotrade 指令登出, 進入離線擺\攤模式.\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 使用 @autotrade 指令登出了遊戲, 進入離線擺\攤模式.\n"
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @suspend).\n"
-  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已使用 @suspend 指令登出, 進入離線掛機模式.\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 使用 @suspend 指令登出了遊戲, 進入離線掛機模式.\n"
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off.\n"
-  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已登出.\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 登出了遊戲.\n"
 - Original: "Character server IP address : %s -> %s\n"
   Translation: "角色伺服器的 IP 地址 : %s -> %s\n"
 - Original: "Character server binding IP address : %s -> %s\n"
@@ -1521,7 +1521,7 @@ Body:
 - Original: "Zero range by %d:%s, divide per 0 avoided!\n"
   Translation: ""
 - Original: "[Instance] Created map '%s' ('%d') from map '%s' ('%d')\n"
-  Translation: ""
+  Translation: "[副本系統] 已建立新地圖 '%s' (%d) 基於現有地圖 '%s' (%d) 構建\n"
 - Original: "[Instance] Created: %s (%hu).\n"
   Translation: "[副本系統] 已建立副本: %s (副本編號: #%hu).\n"
 - Original: "[Instance] Destroyed %hu.\n"
