调整战斗配置选项与服务端不匹配时的一些错误提示

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1450,6 +1450,8 @@ Body:
   Translation: ""
 - Original: "Unknown account (account: %s, ip: %s)\n"
   Translation: "客户端试图登录无效的账号 (账号: '%s', IP地址: %s)\n"
+- Original: "Unknown battle configuration option '%s' in file %s\n"
+  Translation: "发现未知的战斗配置选项 '%s' 存在于 %s 文件中, 可能是配置文件与服务端不匹配.\n"
 - Original: "Unknown option '%s'.\n"
   Translation: ""
 - Original: "Unknown packet 0x%04X (length %d), %s session #%d, %d/%d (AID/CID) at %s\n"
@@ -1687,8 +1689,6 @@ Body:
 - Original: "battle_calc_attack: unknown attack type! %d (skill_id=%d, skill_lv=%d)\n"
   Translation: ""
 - Original: "battle_config_read: '%s' can not be found in battle configuration files, defaulting to %d.\n"
-  Translation: ""
-- Original: "battle_set_value: Could not find the option name '%s' in Battle Configuration Files.\n"
   Translation: ""
 - Original: "bg_info: Invalid Battleground name %s.\n"
   Translation: ""
