--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -1450,6 +1450,8 @@ Body:
   Translation: ""
 - Original: "Unknown account (account: %s, ip: %s)\n"
   Translation: "客戶端試圖登入無效的賬號 (賬號: '%s', IP地址: %s)\n"
+- Original: "Unknown battle configuration option '%s' in file %s\n"
+  Translation: "發現未知的戰鬥配置選項 '%s' 存在於 %s 檔案中, 可能是配置檔案與服務端不匹配.\n"
 - Original: "Unknown option '%s'.\n"
   Translation: ""
 - Original: "Unknown packet 0x%04X (length %d), %s session #%d, %d/%d (AID/CID) at %s\n"
@@ -1687,8 +1689,6 @@ Body:
 - Original: "battle_calc_attack: unknown attack type! %d (skill_id=%d, skill_lv=%d)\n"
   Translation: ""
 - Original: "battle_config_read: '%s' can not be found in battle configuration files, defaulting to %d.\n"
-  Translation: ""
-- Original: "battle_set_value: Could not find the option name '%s' in Battle Configuration Files.\n"
   Translation: ""
 - Original: "bg_info: Invalid Battleground name %s.\n"
   Translation: ""
