汉化使用 @version 指令的回显信息

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -12,6 +12,10 @@
 // 而转换的目标编码与运行服务端的操作系统语言有关系
 //--------------------------------------------------------------
 
+// @version
+1295: 熊猫模拟器版本 %s%s
+1296: 当前伺服器的运行目录中无法读取到 SVN/Git 版本信息.
+
 // =============================================================
 // 熊猫模拟器拓展的消息 - 开始
 // =============================================================
@@ -20,7 +24,7 @@
 // 当玩家没有权限, 但却执行了 GM 指令时显示在聊天栏的提示信息
 2000: 你没有权限这么做, 要乖哟...
 
-// 管理员指令 - @recallmap
+// @recallmap
 2001: 已召唤指定地图的全部玩家!
 
 //2002 闲置
@@ -28,7 +32,7 @@
 // 战斗配置选项 - cashmount_useitem_limit
 2003: 很抱歉, 当您坐上“商城坐骑”时, 无法使用: %s
 
-// 管理员指令 - @title
+// @title
 2012: 使用方法: @title <称号编号, 若设为 0 则取消称号>
 2013: 编号与称号的对照表位于客户端: data\luafiles514\lua files\datainfo\titletable.lub
 2014: 已更换称号.
@@ -80,11 +84,11 @@
 2061: 不死
 // 2062-2080 预留给未来可能出现的新属性
 
-// 管理员指令 - @suspend
+// @suspend
 2081: 死亡时无法进入离线挂机模式, 请先复活.
 2082: 此地图禁止进入离线挂机模式, 请离开此地图后重试.
 
-// 管理员指令 - @afk
+// @afk
 2083: 死亡时无法进入离开模式, 请先复活.
 2082: 此地图禁止进入离开模式, 请离开此地图后重试.
 
@@ -93,7 +97,7 @@
 // 地图标记 - nomail
 2095: 此地图禁止使用邮箱及其相关功能, 请离开此地图后重试.
 
-// 管理员指令 - @mapinfo
+// @mapinfo
 2100: 熊猫地图标记:
 
 // =============================================================
