更新一些相对比较常见的终端提示文本

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -3091,7 +3091,7 @@ Body:
 - Original: "itemdb_parse_dbrow: No buying/selling price defined for item %hu (%s), using 20/10z\n"
   Translation: ""
 - Original: "itemdb_parse_roulette_db: Level %d has %d items, %d are required. Filling with Apples...\n"
-  Translation: ""
+  Translation: "itemdb_parse_roulette_db: 大樂透第 %d 層只有 %d 個物品 (至少需要 %d 個), 不足的使用蘋果填充...\n"
 - Original: "itemdb_parse_roulette_db: Unknown item ID '%hu' in level '%d'\n"
   Translation: ""
 - Original: "itemdb_parse_roulette_db: Unsupported amount '%hu' for item ID '%hu' in level '%d'\n"
@@ -3191,7 +3191,7 @@ Body:
 - Original: "itemdb_readdb: Mismatching curly braces in line %d of \"%s\" (item with id %d), skipping.\n"
   Translation: ""
 - Original: "itemdb_search: Item ID %hu does not exists in the item_db. Using dummy data.\n"
-  Translation: ""
+  Translation: "itemdb_search: 編號為 %hu 的物品不存在於資料庫中. 使用預設資料進行填充.\n"
 - Original: "load_mapreg: duplicate! '%s' => '%s' skipping...\n"
   Translation: ""
 - Original: "log_chattype2char: Unknown chat type %d.\n"
