优化使用 @version 指令的回显信息

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1810,9 +1810,18 @@
 
 // @afk
 2083: You cannot enter afk mode when dead.
-2082: You cannot enter afk mode on this map.
+2084: You cannot enter afk mode on this map.
 
-//2083-2094 free
+// @version
+2085: Pandas Version: %s (%s)
+2086: Official Compilation
+2087: Unofficial Compilation
+2088: Server Mode: %s | PACKETVER: %d | Git Branch: %s | Git Hash: %s
+2089: Pre-Renewal
+2090: Renewal
+2091: Null
+
+//2092-2094 free
 
 // Mapflag - nomail
 2095: Mailbox or RODEX is prohibited on this map!
