--- a/conf/msg_conf/map_msg_chn.conf
+++ b/conf/msg_conf/map_msg_chn.conf
@@ -90,9 +90,18 @@
 
 // @afk
 2083: 死亡時無法進入離開模式, 請先復活.
-2082: 此地圖禁止進入離開模式, 請離開此地圖後重試.
+2084: 此地圖禁止進入離開模式, 請離開此地圖後重試.
 
-//2083-2094 閑置
+// @version
+2085: 熊貓模擬器版本: %s (%s)
+2086: 官方編譯
+2087: 個人 / 非官方編譯
+2088: 執行模式: %s | 適配的客戶端版本: %d | 分支: %s | 提交雜湊: %s
+2089: 復興前
+2090: 復興后
+2091: 暫無數據
+
+//2092-2094 閑置
 
 // 地圖示記 - nomail
 2095: 此地圖禁止使用郵箱及其相關功能, 請離開此地圖後重試.
