--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -90,9 +90,18 @@
 
 // @afk
 2083: 死亡时无法进入离开模式, 请先复活.
-2082: 此地图禁止进入离开模式, 请离开此地图后重试.
+2084: 此地图禁止进入离开模式, 请离开此地图后重试.
 
-//2083-2094 闲置
+// @version
+2085: 熊猫模拟器版本: %s (%s)
+2086: 官方编译
+2087: 个人 / 非官方编译
+2088: 运行模式: %s | 适配的客户端版本: %d | 分支: %s | 提交散列: %s
+2089: 复兴前
+2090: 复兴后
+2091: 暂无数据
+
+//2092-2094 闲置
 
 // 地图标记 - nomail
 2095: 此地图禁止使用邮箱及其相关功能, 请离开此地图后重试.
