登录时默认不在聊天窗口中显示熊猫模拟器的版本号

--- a/conf/battle/client.conf
+++ b/conf/battle/client.conf
@@ -137,7 +137,7 @@ oktoberfest_ignorepalette: no
 motd_type: 0
 
 // 当玩家登录游戏时, 是否在聊天窗口中显示熊猫模拟器的版本号? 
-display_version: yes
+display_version: no
 
 // 当玩家中了“幻觉”效果时, 是否让客户端显示幻觉的特效? (开关选项)
 // 提示: 若客户端由于显示“波浪”幻觉效果而导致很卡, 可以将此选项设置为 no.
