优化使用 @Version 指令的回显信息 (#268)

--- a/conf/msg_conf/map_msg_chn.conf
+++ b/conf/msg_conf/map_msg_chn.conf
@@ -12,6 +12,10 @@
 // 而轉換的目標編碼與運行伺服器的作業系統語言有關係
 //--------------------------------------------------------------
 
+// @version
+1295: 熊貓模擬器版本 %s%s
+1296: 目前伺服器的執行目錄中無法讀取到 SVN/Git 版本資訊.
+
 // =============================================================
 // 熊貓模擬器拓展的訊息 - 開始
 // =============================================================
@@ -20,7 +24,7 @@
 // 當玩家沒有許可權, 但卻執行了 GM 指令時顯示在聊天欄的提示資訊
 2000: 你沒有許可權這麼做, 要乖喲...
 
-// 管理員指令 - @recallmap
+// @recallmap
 2001: 已召喚指定地圖的全部玩家!
 
 //2002 閑置
@@ -28,7 +32,7 @@
 // 戰鬥配置選項 - cashmount_useitem_limit
 2003: 很抱歉, 當您坐上「商城坐騎」時, 無法使用: %s
 
-// 管理員指令 - @title
+// @title
 2012: 使用方法: @title <稱號編號, 若設為 0 則取消稱號>
 2013: 編號與稱號的對照表位於客戶端: data\luafiles514\lua files\datainfo\titletable.lub
 2014: 已更換稱號.
@@ -80,20 +84,29 @@
 2061: 不死
 // 2062-2080 預留給未來可能出現的新屬性
 
-// 管理員指令 - @suspend
+// @suspend
 2081: 死亡時無法進入離線掛機模式, 請先復活.
 2082: 此地圖禁止進入離線掛機模式, 請離開此地圖後重試.
 
-// 管理員指令 - @afk
+// @afk
 2083: 死亡時無法進入離開模式, 請先復活.
-2082: 此地圖禁止進入離開模式, 請離開此地圖後重試.
+2084: 此地圖禁止進入離開模式, 請離開此地圖後重試.
 
-//2083-2094 閑置
+// @version
+2085: 熊貓模擬器版本: %s (%s)
+2086: 官方編譯
+2087: 個人 / 非官方編譯
+2088: 執行模式: %s | 適配的客戶端版本: %d | 分支: %s | 提交雜湊: %s
+2089: 復興前
+2090: 復興后
+2091: 暫無數據
+
+//2092-2094 閑置
 
 // 地圖示記 - nomail
 2095: 此地圖禁止使用郵箱及其相關功能, 請離開此地圖後重試.
 
-// 管理員指令 - @mapinfo
+// @mapinfo
 2100: 熊貓地圖示記:
 
 // =============================================================
