完善关于 crashtest 管理员指令的反馈信息

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1747,7 +1747,8 @@
 // @recallmap
 2001: Summoned all players on the specified map!
 
-//2002 free
+// @crashtest
+2002: Currently we have %d online players. For safety reasons, we does not trigger a crash. Please make sure that the number of player is not more than 1.
 
 // Battle Configure - cashmount_useitem_limit
 2003: Sorry, cannot use: %s when you get on the Cash Mount.
