--- a/conf/msg_conf/map_msg_chn.conf
+++ b/conf/msg_conf/map_msg_chn.conf
@@ -27,7 +27,8 @@
 // @recallmap
 2001: 已召喚指定地圖的全部玩家!
 
-//2002 閑置
+// @crashtest
+2002: 目前線上有 %d 位玩家. 請確保線上人數小於等於 1 人後重試.
 
 // 戰鬥配置選項 - cashmount_useitem_limit
 2003: 很抱歉, 當您坐上「商城坐騎」時, 無法使用: %s
