--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -27,7 +27,8 @@
 // @recallmap
 2001: 已召唤指定地图的全部玩家!
 
-//2002 闲置
+// @crashtest
+2002: 当前有 %d 位玩家在线. 请确保在线人数小于等于 1 人后重试.
 
 // 战斗配置选项 - cashmount_useitem_limit
 2003: 很抱歉, 当您坐上“商城坐骑”时, 无法使用: %s
