修正合并 rAthena 源代码后的一些小问题

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -5,6 +5,7 @@
 //      Place your scripts here!
 
 //npc: npc/location/to/script.txt
+npc: npc/test.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
