恢复被官方移除的 OnPCStatCalcEvent 事件

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1754,17 +1754,29 @@ Body:
   Translation: ""
 - Original: "buildin_achievementadd: Achievement '%d' doesn't exist.\n"
   Translation: ""
+- Original: "buildin_achievementadd: call was too early. Character %s(CID: '%u') was not loaded yet.\n"
+  Translation: ""
 - Original: "buildin_achievementcomplete: Achievement '%d' doesn't exist.\n"
+  Translation: ""
+- Original: "buildin_achievementcomplete: call was too early. Character %s(CID: '%u') was not loaded yet.\n"
   Translation: ""
 - Original: "buildin_achievementexists: Achievement '%d' doesn't exist.\n"
   Translation: ""
+- Original: "buildin_achievementexists: call was too early. Character %s(CID: '%u') was not loaded yet.\n"
+  Translation: ""
 - Original: "buildin_achievementinfo: Achievement '%d' doesn't exist.\n"
   Translation: ""
+- Original: "buildin_achievementinfo: call was too early. Character %s(CID: '%u') was not loaded yet.\n"
+  Translation: ""
 - Original: "buildin_achievementremove: Achievement '%d' doesn't exist.\n"
+  Translation: ""
+- Original: "buildin_achievementremove: call was too early. Character %s(CID: '%u') was not loaded yet.\n"
   Translation: ""
 - Original: "buildin_achievementupdate: Achievement '%d' doesn't exist.\n"
   Translation: ""
 - Original: "buildin_achievementupdate: Unknown type '%d'.\n"
+  Translation: ""
+- Original: "buildin_achievementupdate: call was too early. Character %s(CID: '%u') was not loaded yet.\n"
   Translation: ""
 - Original: "buildin_addtimer: Event timer is full, can't add new event timer. (cid:%d timer:%s)\n"
   Translation: ""
@@ -3738,11 +3750,15 @@ Body:
   Translation: ""
 - Original: "pc_bonus2: SP_VARCASTRATE: Reached max (%d) number of skills per character, bonus skill %d (%d%%) lost.\n"
   Translation: ""
+- Original: "pc_bonus2: unknown bonus type %d %d %d in OnPCStatCalcEvent!\n"
+  Translation: ""
 - Original: "pc_bonus2: unknown bonus type %d %d %d in a combo with item #%d\n"
   Translation: ""
 - Original: "pc_bonus2: unknown bonus type %d %d %d in item #%d\n"
   Translation: ""
 - Original: "pc_bonus2: unknown bonus type %d %d %d in unknown usage. Report this!\n"
+  Translation: ""
+- Original: "pc_bonus3: unknown bonus type %d %d %d %d in OnPCStatCalcEvent!\n"
   Translation: ""
 - Original: "pc_bonus3: unknown bonus type %d %d %d %d in a combo with item #%d\n"
   Translation: ""
@@ -3750,11 +3766,15 @@ Body:
   Translation: ""
 - Original: "pc_bonus3: unknown bonus type %d %d %d %d in unknown usage. Report this!\n"
   Translation: ""
+- Original: "pc_bonus4: unknown bonus type %d %d %d %d %d in OnPCStatCalcEvent!\n"
+  Translation: ""
 - Original: "pc_bonus4: unknown bonus type %d %d %d %d %d in a combo with item #%d\n"
   Translation: ""
 - Original: "pc_bonus4: unknown bonus type %d %d %d %d %d in item #%d\n"
   Translation: ""
 - Original: "pc_bonus4: unknown bonus type %d %d %d %d %d in unknown usage. Report this!\n"
+  Translation: ""
+- Original: "pc_bonus5: unknown bonus type %d %d %d %d %d %d in OnPCStatCalcEvent!\n"
   Translation: ""
 - Original: "pc_bonus5: unknown bonus type %d %d %d %d %d %d in a combo with item #%d\n"
   Translation: ""
@@ -3763,6 +3783,8 @@ Body:
 - Original: "pc_bonus5: unknown bonus type %d %d %d %d %d %d in unknown usage. Report this!\n"
   Translation: ""
 - Original: "pc_bonus: non-RENEWAL_CAST doesn't support this bonus %d.\n"
+  Translation: ""
+- Original: "pc_bonus: unknown bonus type %d %d in OnPCStatCalcEvent!\n"
   Translation: ""
 - Original: "pc_bonus: unknown bonus type %d %d in a combo with item #%d\n"
   Translation: ""
